--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fs": "^0.0.1-security",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
+    "nextjs-cors": "^2.2.0",
     "path": "^0.12.7",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
